--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       display: inline-block;
       animation: bounce 1s infinite;
     }
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
 
     /* Інструкція */
     #scanText {
@@ -169,11 +173,6 @@
       z-index: 10;
       box-shadow: 0 6px 12px rgba(0,0,0,0.4);
     }
-
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
   </style>
 </head>
 <body>
@@ -191,8 +190,8 @@
   <div id="centerYellowDot"></div>
 
   <!-- Кнопки -->
-  <button id="playVideoBtn" class="btn" onclick="playVideo()">▶️ Запустити відео</button>
-  <button id="startQuizBtn" class="btn" onclick="showQuiz()">🎮 Грати у вікторину</button>
+  <button id="playVideoBtn" class="btn">▶️ Запустити відео</button>
+  <button id="startQuizBtn" class="btn">🎮 Грати у вікторину</button>
 
   <!-- AR Сцена -->
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono; trackingMethod: best;">
@@ -204,7 +203,6 @@
         rotation="-90 0 0" 
         preload="none"
         muted="true"
-        loop="false"
         playsinline>
       </a-video>
     </a-marker>
@@ -224,371 +222,195 @@
     <button class="btn" onclick="restartAR()">🔄 Повернутися до сканування</button>
   </div>
 
-  <!-- 🔴 Тестова кнопка (видали після перевірки) -->
-  <button onclick="showQuiz()" style="
-    position: fixed; top: 20px; left: 20px; z-index: 1000;
-    background: red; color: white; border: none; padding: 10px 15px;
-    font-size: 14px; border-radius: 10px;
-  ">🔴 Тест: Відкрити вікторину</button>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const marker = document.getElementById('marker');
+      const scanText = document.getElementById('scanText');
+      const centerYellowDot = document.getElementById('centerYellowDot');
+      const playVideoBtn = document.getElementById('playVideoBtn');
+      const startQuizBtn = document.getElementById('startQuizBtn');
+      const arVideo = document.getElementById('arVideo');
+      const clickToStart = document.getElementById('clickToStart');
+      const quizContainer = document.getElementById('quizContainer');
 
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>AR Камера — Чарівне Пригодництво!</title>
-  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      touch-action: none;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
-      background: transparent;
-    }
-    a-scene {
-      width: 100% !important;
-      height: 100% !important;
-      position: fixed;
-      top: 0;
-      left: 0;
-      background: transparent;
-    }
+      let canPlay = false;   // Чи розблоковано взаємодію
+      let isPlaying = false; // Чи відео зараз грає
+      let isQuizActive = false; // Чи відкрита вікторина
 
-    /* Інструкція перед скануванням */
-    #scanText {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #FF69B4;
-      font-size: 2em;
-      font-weight: bold;
-      text-shadow: 2px 2px 10px yellow, 0 0 10px #ff00ff;
-      z-index: 10;
-      text-align: center;
-      width: 90%;
-      animation: pulse 1.5s infinite;
-      background: rgba(255, 255, 0, 0.9);
-      padding: 15px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(255, 105, 180, 0.8);
-    }
-    @keyframes pulse {
-      0% { transform: translate(-50%, -50%) scale(1); }
-      50% { transform: translate(-50%, -50%) scale(1.1); }
-      100% { transform: translate(-50%, -50%) scale(1); }
-    }
+      // --- Вікторина ---
+      const quiz = [
+        { q: "Яка столиця України?", o: ["Київ", "Львів", "Одеса"], c: 0 },
+        { q: "Який колір прапора України?", o: ["Червоно-чорний", "Синьо-жовтий", "Зелено-білий"], c: 1 },
+        { q: "Яка найвища гора в Україні?", o: ["Говерла", "Роман-Кош", "Піп Іван"], c: 0 }
+      ];
+      let quizIndex = 0;
+      let quizScore = 0;
 
-    /* Маленька жовта крапка */
-    #centerYellowDot {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 1px;
-      height: 1px;
-      background: #FFD700;
-      border-radius: 50%;
-      z-index: 10;
-      display: none;
-      box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
-      opacity: 0.9;
-      animation: glow 2s infinite alternate;
-    }
-    @keyframes glow {
-      from { box-shadow: 0 0 5px rgba(255, 215, 0, 0.5); }
-      to { box-shadow: 0 0 15px rgba(255, 215, 0, 0.8); }
-    }
+      function showQuiz() {
+        console.log("🎮 Вікторина відкрита");
+        arVideo.pause();
+        arVideo.currentTime = 0;
+        isPlaying = false;
+        isQuizActive = true;
 
-    /* Кнопка запуску відео */
-    #playVideoBtn {
-      position: fixed;
-      bottom: 100px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #4CAF50;
-      color: white;
-      padding: 16px 32px;
-      border-radius: 30px;
-      font-size: 1.3em;
-      font-weight: bold;
-      border: none;
-      z-index: 10;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
-      display: none;
-      cursor: pointer;
-      animation: popUp 0.5s forwards;
-    }
-    @keyframes popUp {
-      from { opacity: 0; transform: translateX(-50%) scale(0.8); }
-      to { opacity: 1; transform: translateX(-50%) scale(1); }
-    }
-
-    /* Кнопка SmartLessa */
-    #smartLessaBtn {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: linear-gradient(45deg, #ff0044, #ff6600);
-      color: white;
-      padding: 14px 24px;
-      border-radius: 30px;
-      font-size: 1.1em;
-      font-weight: bold;
-      text-decoration: none;
-      z-index: 10;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Інструкція -->
-  <div id="scanText">🔍 Наведи на зображення!</div>
-
-  <!-- Жовта крапка -->
-  <div id="centerYellowDot"></div>
-
-  <!-- Кнопка запуску відео -->
-  <button id="playVideoBtn" onclick="playVideo()">▶️ Запустити відео</button>
-
-  <!-- AR Сцена -->
-  <a-scene embedded arjs="sourceType: webcam; detectionMode: mono; trackingMethod: best;">
-    <a-marker id="marker" type="pattern" url="marker.patt">
-      <a-video 
-        id="arVideo" 
-        src="ar-video.mp4" 
-        position="0 0 0" 
-        rotation="-90 0 0" 
-        preload="none"
-        autoplay="false"
-        muted="true">
-      </a-video>
-    </a-marker>
-    <a-entity camera></a-entity>
-  </a-scene>
-
-  <!-- Кнопка YouTube -->
-  <a href="https://youtube.com/playlist?list=PL6UDFwT9TzFxsVdFiEBsQ9yFpcYRPOpfO&si=IyXv1SkdPyvhcW7Z" 
-     id="smartLessaBtn" target="_blank">👉 Дивись більше на @SmartLessa</a>
-
-  <!-- Звуковий ефект -->
-  <audio id="successSound" src="https://cdn.pixabay.com/audio/2021/09/21/audio_2811f3692c.mp3" preload="auto"></audio>
-
-<script>
-  // Чекаємо, доки DOM повністю завантажиться
-  document.addEventListener('DOMContentLoaded', () => {
-    const marker = document.getElementById('marker');
-    const scanText = document.getElementById('scanText');
-    const centerYellowDot = document.getElementById('centerYellowDot');
-    const playVideoBtn = document.getElementById('playVideoBtn');
-    const startQuizBtn = document.getElementById('startQuizBtn');
-    const arVideo = document.getElementById('arVideo');
-    const clickToStart = document.getElementById('clickToStart');
-    const quizContainer = document.getElementById('quizContainer');
-
-    let canPlay = false;
-    let isPlaying = false;
-
-    // --- Вікторина ---
-    const quiz = [
-      { q: "Яка столиця України?", o: ["Київ", "Львів", "Одеса"], c: 0 },
-      { q: "Який колір прапора України?", o: ["Червоно-чорний", "Синьо-жовтий", "Зелено-білий"], c: 1 },
-      { q: "Яка найвища гора в України?", o: ["Говерла", "Роман-Кош", "Піп Іван"], c: 0 }
-    ];
-    let quizIndex = 0;
-    let quizScore = 0;
-
-    function showQuiz() {
-      console.log("🎮 Вікторина відкрита");
-      arVideo.pause();
-      arVideo.currentTime = 0;
-      isPlaying = false;
-
-      quizContainer.style.display = 'flex';
-      playVideoBtn.style.display = 'none';
-      startQuizBtn.style.display = 'none';
-      
-      quizIndex = 0;
-      quizScore = 0;
-      nextQuizQuestion();
-    }
-
-    function nextQuizQuestion() {
-      if (quizIndex < quiz.length) {
-        const q = quiz[quizIndex];
-        document.getElementById('quizQuestion').textContent = q.q;
-        document.getElementById('opt1').textContent = q.o[0];
-        document.getElementById('opt2').textContent = q.o[1];
-        document.getElementById('opt3').textContent = q.o[2];
-
-        document.getElementById('opt1').onclick = () => checkAnswer(0);
-        document.getElementById('opt2').onclick = () => checkAnswer(1);
-        document.getElementById('opt3').onclick = () => checkAnswer(2);
-      } else {
-        showQuizResult();
-      }
-    }
-
-    function checkAnswer(selected) {
-      if (selected === quiz[quizIndex].c) quizScore++;
-      quizIndex++;
-      nextQuizQuestion();
-    }
-
-    function showQuizResult() {
-      const stars = '⭐'.repeat(quizScore);
-      document.getElementById('quizQuestion').innerHTML = 
-        `🎉 Вітаю!<br>Ти молодець!<br>Результат: ${quizScore}/3 ${stars}`;
-      document.getElementById('opt1').style.display = 'none';
-      document.getElementById('opt2').style.display = 'none';
-      document.getElementById('opt3').style.display = 'none';
-    }
-
-    // --- Екран активації ---
-    clickToStart.addEventListener('click', () => {
-      clickToStart.style.display = 'none';
-      canPlay = true;
-    });
-
-    // --- Відео: метадані завантажено ---
-    arVideo.addEventListener('loadedmetadata', () => {
-      console.log("📽️ Відео завантажено");
-      arVideo.pause();
-
-      const videoWidth = arVideo.videoWidth;
-      const videoHeight = arVideo.videoHeight;
-      const scaleFactor = 2;
-      const height = (videoHeight / 100) * scaleFactor;
-      const width = (videoWidth / videoHeight) * height;
-      arVideo.setAttribute('width', width);
-      arVideo.setAttribute('height', height);
-    });
-
-    // --- Маркер знайдено ---
-    marker.addEventListener('markerFound', () => {
-      scanText.style.display = 'none';
-      centerYellowDot.style.display = 'block';
-      if (!isPlaying && canPlay && quizContainer.style.display !== 'flex') {
-        playVideoBtn.style.display = 'block';
-      }
-    });
-
-    // --- Маркер втрачено ---
-    marker.addEventListener('markerLost', () => {
-      scanText.style.display = 'block';
-      centerYellowDot.style.display = 'none';
-      playVideoBtn.style.display = 'none';
-      startQuizBtn.style.display = 'none';
-      arVideo.pause();
-      arVideo.currentTime = 0;
-      isPlaying = false;
-    });
-
-    // --- Подія: відео закінчилося ---
-    arVideo.addEventListener('ended', () => {
-      console.log("✅ Відео закінчилося");
-      isPlaying = false;
-      playVideoBtn.style.display = 'none';
-      startQuizBtn.style.display = 'block';
-    });
-
-    // --- 🔴 ГАРАНТОВАНИЙ ЗАПУСК ВІДЕО ---
-    function playVideo() {
-      console.log("▶️ Кнопка 'Запустити відео' натиснута");
-
-      if (isPlaying) {
-        console.log("⏸️ Відео вже грає");
-        return;
+        quizContainer.style.display = 'flex';
+        playVideoBtn.style.display = 'none';
+        startQuizBtn.style.display = 'none';
+        
+        quizIndex = 0;
+        quizScore = 0;
+        nextQuizQuestion();
       }
 
-      arVideo.currentTime = 0;
+      function nextQuizQuestion() {
+        if (quizIndex < quiz.length) {
+          const q = quiz[quizIndex];
+          document.getElementById('quizQuestion').textContent = q.q;
+          document.getElementById('opt1').textContent = q.o[0];
+          document.getElementById('opt2').textContent = q.o[1];
+          document.getElementById('opt3').textContent = q.o[2];
 
-      // Пробуємо запустити
-      const playPromise = arVideo.play();
-
-      if (playPromise !== undefined) {
-        playPromise.then(() => {
-          console.log("✅ Відео успішно запущено");
-          isPlaying = true;
-          playVideoBtn.style.display = 'none';
-
-          // Страховка: через 19 сек — вікторина
-          setTimeout(() => {
-            if (isPlaying && !arVideo.ended) {
-              console.log("⏰ Страховка: вікторина через 19 сек");
-              arVideo.pause();
-              isPlaying = false;
-              startQuizBtn.style.display = 'block';
-            }
-          }, 19000);
-
-        }).catch(err => {
-          console.error("❌ Не вдалося запустити відео:", err);
-          alert("❌ Не вдалося запустити відео. Натисни ще раз. Переконайся, що відео ar-video.mp4 завантажено.");
-        });
+          document.getElementById('opt1').onclick = () => checkAnswer(0);
+          document.getElementById('opt2').onclick = () => checkAnswer(1);
+          document.getElementById('opt3').onclick = () => checkAnswer(2);
+        } else {
+          showQuizResult();
+        }
       }
-    }
 
-    // --- Прив’язуємо кнопку після DOM ---
-    if (playVideoBtn) {
-      playVideoBtn.onclick = playVideo;
-    } else {
-      console.error("❌ Кнопка playVideoBtn не знайдена");
-    }
+      function checkAnswer(selected) {
+        if (selected === quiz[quizIndex].c) quizScore++;
+        quizIndex++;
+        nextQuizQuestion();
+      }
 
-    if (startQuizBtn) {
-      startQuizBtn.onclick = showQuiz;
-    }
+      function showQuizResult() {
+        const stars = '⭐'.repeat(quizScore);
+        document.getElementById('quizQuestion').innerHTML = 
+          `🎉 Вітаю!<br>Ти молодець!<br>Результат: ${quizScore}/3 ${stars}`;
+        document.getElementById('opt1').style.display = 'none';
+        document.getElementById('opt2').style.display = 'none';
+        document.getElementById('opt3').style.display = 'none';
+      }
 
-    // --- Повернення ---
-    window.restartAR = function() {
-      arVideo.pause();
-      arVideo.currentTime = 0;
-      isPlaying = false;
-
-      quizContainer.style.display = 'none';
-      document.getElementById('opt1').style.display = 'block';
-      document.getElementById('opt2').style.display = 'block';
-      document.getElementById('opt3').style.display = 'block';
-      startQuizBtn.style.display = 'none';
-      scanText.style.display = 'block';
-    };
-
-    // --- Фікс висоти ---
-    function fixHeight() {
-      document.body.style.height = window.innerHeight + 'px';
-    }
-    window.addEventListener('resize', fixHeight);
-    fixHeight();
-
-    // --- Задня камера ---
-    AFRAME.utils.device.getCameraPermission = () => {
-      return navigator.mediaDevices.getUserMedia({
-        video: { facingMode: 'environment' }
+      // --- Екран активації ---
+      clickToStart.addEventListener('click', () => {
+        clickToStart.style.display = 'none';
+        canPlay = true;
       });
-    };
 
-    // --- Логування ---
-    arVideo.addEventListener('play', () => console.log("▶️ play"));
-    arVideo.addEventListener('pause', () => console.log("⏸️ pause"));
-    arVideo.addEventListener('error', e => console.error("❌ video error:", e));
-    arVideo.addEventListener('canplay', () => console.log("✅ canplay: відео готове"));
-    arVideo.addEventListener('waiting', () => console.log("🟡 waiting: відео завантажується"));
-  });
-</script>
+      // --- Відео: метадані завантажено ---
+      arVideo.addEventListener('loadedmetadata', () => {
+        arVideo.pause();
+
+        const videoWidth = arVideo.videoWidth;
+        const videoHeight = arVideo.videoHeight;
+        const scaleFactor = 2;
+        const height = (videoHeight / 100) * scaleFactor;
+        const width = (videoWidth / videoHeight) * height;
+        arVideo.setAttribute('width', width);
+        arVideo.setAttribute('height', height);
+      });
+
+      // --- Маркер знайдено ---
+      marker.addEventListener('markerFound', () => {
+        scanText.style.display = 'none';
+        centerYellowDot.style.display = 'block';
+
+        if (!isPlaying && canPlay && !isQuizActive) {
+          playVideoBtn.style.display = 'block';
+        }
+      });
+
+      // --- Маркер втрачено ---
+      marker.addEventListener('markerLost', () => {
+        scanText.style.display = 'block';
+        centerYellowDot.style.display = 'none';
+        playVideoBtn.style.display = 'none';
+        startQuizBtn.style.display = 'none';
+
+        if (isPlaying || !arVideo.ended) {
+          arVideo.pause();
+          arVideo.currentTime = 0;
+          isPlaying = false;
+        }
+      });
+
+      // --- Відео закінчилося ---
+      arVideo.addEventListener('ended', () => {
+        isPlaying = false;
+        playVideoBtn.style.display = 'none';
+        startQuizBtn.style.display = 'block';
+      });
+
+      // --- Запуск відео ---
+      function playVideo() {
+        if (isPlaying) return;
+
+        arVideo.currentTime = 0;
+        const playPromise = arVideo.play();
+
+        if (playPromise !== undefined) {
+          playPromise.then(() => {
+            isPlaying = true;
+            playVideoBtn.style.display = 'none';
+
+            // 🔒 Страховка: через 19 секунд — вікторина
+            setTimeout(() => {
+              if (isPlaying && !arVideo.ended) {
+                arVideo.pause();
+                arVideo.currentTime = 0;
+                isPlaying = false;
+                startQuizBtn.style.display = 'block';
+              }
+            }, 19000);
+
+          }).catch(err => {
+            console.error("❌ Не вдалося запустити відео:", err);
+            alert("Не вдалося запустити відео. Натисни ще раз.");
+          });
+        }
+      }
+
+      // --- Прив’язуємо кнопки ---
+      playVideoBtn.addEventListener('click', playVideo);
+      startQuizBtn.addEventListener('click', showQuiz);
+
+      // --- Повернення ---
+      window.restartAR = function() {
+        arVideo.pause();
+        arVideo.currentTime = 0;
+        isPlaying = false;
+        isQuizActive = false;
+
+        quizContainer.style.display = 'none';
+        document.getElementById('opt1').style.display = 'block';
+        document.getElementById('opt2').style.display = 'block';
+        document.getElementById('opt3').style.display = 'block';
+        startQuizBtn.style.display = 'none';
+        scanText.style.display = 'block';
+      };
+
+      // --- Фікс висоти ---
+      function fixHeight() {
+        document.body.style.height = window.innerHeight + 'px';
+      }
+      window.addEventListener('resize', fixHeight);
+      fixHeight();
+
+      // --- Задня камера ---
+      AFRAME.utils.device.getCameraPermission = () => {
+        return navigator.mediaDevices.getUserMedia({
+          video: { facingMode: 'environment' }
+        });
+      };
+
+      // --- Логування ---
+      arVideo.addEventListener('play', () => console.log("▶️ play"));
+      arVideo.addEventListener('pause', () => console.log("⏸️ pause"));
+      arVideo.addEventListener('error', e => console.error("❌ video error:", e));
+      arVideo.addEventListener('canplay', () => console.log("✅ canplay"));
+    });
+  </script>
 </body>
 </html>
-
-
-
-</body>
-</html>
-
-
