--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="uk">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>AR Камера — Чарівне Пригодництво!</title>
-  <!-- ✅ Виправлено: пробіли в URL -->
+
+  <!-- A-Frame та AR.js -->
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+
   <style>
+    /* Стилі з першого проєкту + додані від другого */
     html, body {
       margin: 0;
       padding: 0;
@@ -18,6 +22,7 @@
       font-family: 'Comic Sans MS', cursive, sans-serif;
       background: transparent;
     }
+
     a-scene {
       width: 100% !important;
       height: 100% !important;
@@ -52,7 +57,7 @@
       50% { transform: translateY(-10px); }
     }
 
-    /* Інструкція */
+    /* Інструкція сканування */
     #scanText {
       position: fixed;
       top: 50%;
@@ -92,57 +97,19 @@
       padding: 16px 32px;
       border: none;
       border-radius: 30px;
-      font-size: 1.3em;<!DOCTYPE html>
-<html lang="uk">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AR-Україна: Навчайся у реальності майбутнього</title>
-  <meta name="description" content="Інтерактивне AR-навчання про Україну з вікториною" />
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      margin: 0;
-      overflow: hidden;
-      font-family: 'Segoe UI', Arial, sans-serif;
-      background: #000;
-    }
-
-    #overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      font-size: 1.3em;
+      background: #FF69B4;
       color: white;
-      font-size: 24px;
-      text-align: center;
-      z-index: 10;
-      transition: opacity 0.5s ease;
-      padding: 20px;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      transition: all 0.3s;
+    }
+    .btn:hover {
+      background: #FF1493;
+      transform: scale(1.05);
     }
 
-    #overlay.hidden {
-      opacity: 0;
-      pointer-events: none;
-    }
-
-    #overlay p {
-      margin: 10px 0 0;
-      font-size: 18px;
-      opacity: 0.9;
-    }
-
+    /* Відео-контролі */
     #video-controls {
       position: absolute;
       bottom: 20px;
@@ -152,24 +119,7 @@
       display: none;
     }
 
-    button {
-      padding: 12px 20px;
-      margin: 5px;
-      font-size: 16px;
-      cursor: pointer;
-      background-color: #0057b7; /* Синій — колір прапора */
-      color: white;
-      border: none;
-      border-radius: 8px;
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    button:hover, button:focus {
-      background-color: #ffd700; /* Жовтий — другий колір */
-      color: black;
-      outline: 2px solid white;
-    }
-
+    /* Вікторина */
     #quiz-container {
       position: absolute;
       top: 50%;
@@ -186,21 +136,17 @@
       display: none;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
     }
-
     #quiz-container h2 {
       margin: 0 0 16px;
       font-size: 22px;
     }
-
     #question {
       font-size: 18px;
       margin-bottom: 16px;
     }
-
     #options {
       margin-bottom: 20px;
     }
-
     .option {
       padding: 12px;
       margin: 8px 0;
@@ -210,34 +156,25 @@
       transition: transform 0.1s;
       border: 1px solid #555;
     }
-
     .option:hover {
       background: #444;
     }
-
-    .option:focus {
-      outline: 2px solid #ffd700;
-    }
-
     .option.correct {
       background: #28a745;
       color: white;
       animation: correct 0.5s;
       font-weight: bold;
     }
-
     .option.incorrect {
       background: #dc3545;
       color: white;
       animation: incorrect 0.5s;
     }
-
     @keyframes correct {
       0% { transform: scale(1); }
       50% { transform: scale(1.1); }
       100% { transform: scale(1); }
     }
-
     @keyframes incorrect {
       0% { transform: translateX(0); }
       25% { transform: translateX(-10px); }
@@ -245,7 +182,6 @@
       75% { transform: translateX(-10px); }
       100% { transform: translateX(0); }
     }
-
     #next-question, #return-to-ar {
       display: none;
     }
@@ -253,20 +189,26 @@
 </head>
 <body>
 
-  <!-- Інструкція на початку -->
-  <div id="overlay">
-    <div>
-      <div>🔍 Наведи камеру на маркер</div>
-      <p>Роздрукуй <strong>marker.png</strong> або відкрий на іншому пристрої</p>
-    </div>
+  <!-- Екран активації -->
+  <div id="clickToStart">
+    Торкнись екрана, щоб почати<br>
+    <span>👇</span>
   </div>
 
-  <!-- Кнопки керування відео -->
+  <!-- Інструкція -->
+  <div id="scanText">
+    🔍 Наведи камеру на маркер
+  </div>
+
+  <!-- Жовта крапка -->
+  <div id="centerYellowDot"></div>
+
+  <!-- Відео-контролі -->
   <div id="video-controls">
-    <button onclick="playVideo()">▶️ Запустити відео</button>
-    <button onclick="pauseVideo()">⏸ Пауза</button>
-    <button onclick="stopVideo()">⏹ Зупинити</button>
-    <button onclick="showQuiz()">👉 Вікторина</button>
+    <button class="btn" onclick="playVideo()">▶️ Запустити</button>
+    <button class="btn" onclick="pauseVideo()">⏸ Пауза</button>
+    <button class="btn" onclick="stopVideo()">⏹ Зупинити</button>
+    <button class="btn" onclick="showQuiz()">❓ Вікторина</button>
   </div>
 
   <!-- Вікторина -->
@@ -274,8 +216,8 @@
     <h2>Вікторина про Україну</h2>
     <div id="question"></div>
     <div id="options"></div>
-    <button id="next-question">Наступне питання</button>
-    <button id="return-to-ar">🔄 Повернутися</button>
+    <button id="next-question" class="btn">Наступне питання</button>
+    <button id="return-to-ar" class="btn">🔄 Повернутися</button>
   </div>
 
   <!-- AR-сцена -->
@@ -284,7 +226,6 @@
     arjs="sourceType: webcam; debugUIEnabled: false;"
     vr-mode-ui="enabled: false"
   >
-    <!-- Твій кастомний маркер -->
     <a-marker type="pattern" url="./markers/marker.patt">
       <a-video
         id="ar-video"
@@ -298,17 +239,14 @@
         playsinline
       ></a-video>
     </a-marker>
-
     <a-entity camera></a-entity>
   </a-scene>
 
-  <!-- Скрипти після контенту -->
-  <script src="https://cdn.jsdelivr.net/npm/aframe@1.5.0/dist/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/ar.js@3.4.0/aframe/build/aframe-ar.js"></script>
-
+  <!-- Скрипти -->
   <script>
     // Елементи
-    const overlay = document.getElementById('overlay');
+    const clickToStart = document.getElementById('clickToStart');
+    const scanText = document.getElementById('scanText');
     const videoControls = document.getElementById('video-controls');
     const videoEl = document.getElementById('ar-video');
     const quizContainer = document.getElementById('quiz-container');
@@ -317,67 +255,53 @@
     const nextButton = document.getElementById('next-question');
     const returnButton = document.getElementById('return-to-ar');
 
-    // Звуки
-    const correctSound = new Audio('https://www.soundjay.com/buttons/sounds/beep-01a.mp3');
-    const incorrectSound = new Audio('https://www.soundjay.com/buttons/sounds/beep-02.mp3');
+    // Активуємо AR при кліку
+    clickToStart.addEventListener('click', () => {
+      clickToStart.style.display = 'none';
+      scanText.style.display = 'block';
+      document.getElementById('centerYellowDot').style.display = 'block';
+    });
 
-    // Розблокування звуку при першому кліку
+    // Звуки
     let soundUnlocked = false;
     document.body.addEventListener('click', unlockAudio, { once: true });
 
     function unlockAudio() {
       soundUnlocked = true;
-      // Тихе програвання для активації
+      const correctSound = new Audio('https://www.soundjay.com/buttons/sounds/beep-01a.mp3');
+      const incorrectSound = new Audio('https://www.soundjay.com/buttons/sounds/beep-02.mp3');
       correctSound.volume = 0;
       incorrectSound.volume = 0;
       correctSound.play().then(() => {
+        window.correctSound = correctSound;
+        window.incorrectSound = incorrectSound;
         correctSound.volume = 1;
         incorrectSound.volume = 1;
       }).catch(() => {
-        console.warn("Автоматичне відтворення звуку заблоковано.");
+        console.warn("Автовідтворення заблоковано.");
       });
     }
 
-    // Питання вікторини
+    // Питання
     const questions = [
-      {
-        question: "Столиця України?",
-        options: ["Київ", "Львів", "Одеса", "Харків"],
-        correct: 0
-      },
-      {
-        question: "Державна мова України?",
-        options: ["Російська", "Українська", "Польська"],
-        correct: 1
-      },
-      {
-        question: "Який символ на гербі України?",
-        options: ["Зірка", "Тризуб", "Сонце"],
-        correct: 1
-      },
-      {
-        question: "Рік проголошення Незалежності України?",
-        options: ["1990", "1991", "1992"],
-        correct: 1
-      },
-      {
-        question: "Найбільша річка України?",
-        options: ["Дніпро", "Дунай", "Дністер"],
-        correct: 0
-      }
+      { question: "Столиця України?", options: ["Київ", "Львів", "Одеса", "Харків"], correct: 0 },
+      { question: "Державна мова України?", options: ["Російська", "Українська", "Польська"], correct: 1 },
+      { question: "Який символ на гербі України?", options: ["Зірка", "Тризуб", "Сонце"], correct: 1 },
+      { question: "Рік проголошення Незалежності України?", options: ["1990", "1991", "1992"], correct: 1 },
+      { question: "Найбільша річка України?", options: ["Дніпро", "Дунай", "Дністер"], correct: 0 }
     ];
 
     let currentQuestion = 0;
 
-    // Обробка маркера
+    // Події маркера
     const marker = document.querySelector('a-marker');
     marker.addEventListener('markerFound', () => {
-      overlay.classList.add('hidden');
+      scanText.style.display = 'none';
       videoControls.style.display = 'block';
     });
 
     marker.addEventListener('markerLost', () => {
-      overlay.classList.remove('hidden');
+      scanText.style.display = 'block';
       videoControls.style.display = 'none';
       if (quizContainer.style.display === 'block') {
         if (confirm("Маркер втрачено. Повернутися до сканування?")) {
@@ -389,7 +313,7 @@
       }
     });
 
-    // Керування відео
+    // Відео
     function getVideo() {
       return videoEl.components.material.material.map.image;
     }
@@ -430,13 +354,6 @@
         btn.className = 'option';
         btn.textContent = option;
         btn.onclick = () => checkAnswer(index);
-        btn.tabIndex = 0;
-        btn.onkeydown = (e) => {
-          if (e.key === 'Enter' || e.key === ' ') {
-            e.preventDefault();
-            checkAnswer(index);
-          }
-        };
         optionsEl.appendChild(btn);
       });
 
@@ -449,18 +366,14 @@
 
       if (index === q.correct) {
         options[index].classList.add('correct');
-        if (soundUnlocked) correctSound.play();
+        if (window.correctSound) window.correctSound.play();
       } else {
         options[index].classList.add('incorrect');
         options[q.correct].classList.add('correct');
-        if (soundUnlocked) incorrectSound.play();
+        if (window.incorrectSound) window.incorrectSound.play();
       }
 
-      // Блокуємо кліки
-      for (let i = 0; i < options.length; i++) {
-        options[i].onclick = null;
-        options[i].onkeydown = null;
-      }
+      Array.from(options).forEach(btn => { btn.onclick = null; });
 
       nextButton.style.display = 'block';
       if (currentQuestion === questions.length - 1) {
